Overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .section {
-    overflow: hidden;
+    overflow: visible;
     position: fixed;
     height: 100vh;
     width: 100%;
