--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -89,6 +89,7 @@
     display: flex;
     flex-direction: column;
     height: fit-content;
+    overflow-y: visible;
 }
 
 @media (max-width: 768px) {
